--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "dependencies": {
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "@sequelize/core": "^7.0.0-alpha.43",
+    "@sequelize/postgres": "^7.0.0-alpha.43",
+    "sequelize": "^6.37.5"
   },
   "name": "express-sequelize-boilerplate",
   "version": "1.0.0",
   "main": "index.js",
   "devDependencies": {
-    "@sequelize/core": "^7.0.0-alpha.43",
-    "@sequelize/postgres": "^7.0.0-alpha.43",
-    "sequelize": "^6.37.5",
     "sequelize-cli": "^6.6.2"
   },
   "scripts": {
